fix: Align headings and content

--- a/assets/stylesheets/framework/_typography.scss
+++ b/assets/stylesheets/framework/_typography.scss
@@ -197,7 +197,10 @@ pre[class*="language-"],
   h3,
   h4,
   h5,
-  h6 { 
+  h6 {
+    
+    position: relative;
+    
     > a[aria-hidden] {
       left: -1em;
       width: 1em;
